--- a/css/main.css
+++ b/css/main.css
@@ -163,9 +163,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Backgrounds */
 
 .bg-1{
-  background-image: url('../images/pollock.png');
-  background-size: cover;
-  background-position: center;
+  background-color: #2c3e50; /* Elegant Dark Blue */
+  background-image: none;
 }
 
 /* Header */
