--- a/css/main.css
+++ b/css/main.css
@@ -11,17 +11,17 @@ audio[controls],canvas,video {display: inline-block; *display: inline; zoom: 1}
 
 /* BASE */
 html {height: 100%; font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%} /* Force scrollbar in non-IE and Remove iOS text size adjust without disabling user zoom */
-body {margin: 0; min-height: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility;color: #666} /* Improve default text rendering, handling of kerning pairs and ligatures */
+body {margin: 0; min-height: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility;color: #ddd; background-color: #000;} /* Improve default text rendering, handling of kerning pairs and ligatures */
 
 /* DEFAULT FONT SETTINGS */
 /* 16px base font size with 150% (24px) friendly, unitless line height and margin for vertical rhythm */
 /* Font-size percentage is based on 16px browser default size */
-body, button, input, select, textarea {font: 100%  'Lato', sans-serif; *font-size: 1em; color: #555} /* IE7 and older can't resize px based text */
+body, button, input, select, textarea {font: 100%  'Lato', sans-serif; *font-size: 1em; color: #ddd} /* IE7 and older can't resize px based text */
 p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldset, menu, img {margin: 0 0 1.5em; padding: 0}
 
 /* TYPOGRAPHY */
 /* Composed to a scale of 12px, 14px, 16px, 18px, 21px, 24px, 36px, 48px, 60px and 72px */
-h1, h2, h3, h4, h5, h6 {font-family:'Open Sans', sans-serif;color:#444;}
+h1, h2, h3, h4, h5, h6 {font-family:'Open Sans', sans-serif;color:#fff;}
 h1 {margin: 0; font-size: 3.75em; line-height: 1.2em; margin-bottom: 0.4em} /* 60px / 72px */
 h2 {margin: 0; font-size: 3em; line-height: 1em; margin-bottom: 0.5em} /* 48px / 48px */
 h3 {margin: 0; font-size: 2.25em; line-height: 1.3333333333333333333333333333333em; margin-bottom: 0.6667em} /* 36px / 48px */ 
@@ -163,7 +163,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Backgrounds */
 
 .bg-1{
-  background-color: #2c3e50; /* Elegant Dark Blue */
+  background-color: #000; /* Elegant Black */
   background-image: none;
 }
 
@@ -194,8 +194,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 #tab-data-wrap{
   padding: 30px 20px;
-  background: #fff;
-  border: 1px solid #f1f1f1;
+  background: #000;
+  border: 1px solid #333;
   box-shadow: 0px 6px #c0392b;
   border-radius: 0px 0px 4px 4px;
 }
@@ -205,8 +205,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   display: inline-block;
   zoom: 1;
   *display: inline;
-  background: #fff;
-  border: solid 1px #f1f1f1;
+  background: #000;
+  border: solid 1px #333;
   border-bottom: 0px;
   -moz-border-radius: 4px 4px 0 0;
   -webkit-border-radius: 4px 4px 0 0;
@@ -229,10 +229,10 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 
 .tab.active {
-  background: #fff;
+  background: #000;
   position: relative;
   top: 1px;
-  border-color: #f1f1f1;
+  border-color: #333;
   border-bottom: none;
 }
 
